# Formatter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.h  utils.cpp
.github/workflows/: cmake-multi-platform.yml
kern/: kern.cpp  kern.h
tools/: indent_all.sh  indent_all_do.sh
